fixed issue where layout didn't scale down properly on smallest screen size

--- a/src/app/ingredients-by-provider.component.css
+++ b/src/app/ingredients-by-provider.component.css
@@ -12,15 +12,3 @@ h5 {
     width: 20rem;
     height: 23rem;
 }
-
-@media screen and (max-width: 768px) {
-    .text-style {
-        margin-top: 5%
-    }
-    #search img {
-        width: 9%;
-        margin-right: 4%;
-        margin-top: 4%;
-        display: inline-block;
-    }
-}
