--- a/src/app/recipe-list-page.component.css
+++ b/src/app/recipe-list-page.component.css
@@ -18,14 +18,11 @@ h5 {
 }
 
 @media screen and (max-width: 768px) {
-    .card {
-        margin-left: 30%
-    }
     .text-style {
         margin-top: 5%
     }
     #search img {
-        width: 9%;
+        width: 12%;
         margin-right: 4%;
         margin-top: 4%;
         display: inline-block;
